# vpn-contracts

./: .gitignore  ARCHITECTURE.md  README.md  aiken.toml  plutus.json
circuits/: Cargo.toml
circuits/benches/: circuit_bench.rs
circuits/reference/: generate_verifier_reference.rs
circuits/src/: aiken_transcript.rs  chips.rs  circuit.rs  lib.rs  main.rs  poseidon_chip.rs  types.rs
circuits/src/bls12_381/: mod.rs
lib/: escrow_types.ak  types.ak  utilities.ak
lib/halo2/: compat.ak  omega_rotations.ak  proof_verifier.ak  transcript.ak
mainnet/datums/: vpn_reference_data.json
mainnet/tx/: nft.raw  nft.sign  vpn-access.raw
mainnet/validators/: nft.plutus  plutus.json  vpn.addr  vpn.plutus
mainnet/wallets/: provider-stake.addr  ref-wallet.addr  ref-wallet.vkey
midnight/contract/: package-lock.json  package.json  vitest.config.ts
preprod/datums/: bp_vpn_data.json  provider_vpn_data.json  user1_vpn_data.json  user2_vpn_data.json  user3_vpn_data.json  vpn_reference_data.json
preprod/redeemers/: update_ref_data.json  user1_extend.json  user1_mint.json  user2_burn.json  user2_mint.json  user3_mint.json
preprod/tx/: burn-vpn-access.raw  burn-vpn-access.sign  extend-vpn-access.raw  extend-vpn-access.sign  nft.raw  nft.sign  update-reference.raw  update-reference.sign  vpn-access.raw  vpn-access.sign
preprod/validators/: nft.plutus  plutus.json  vpn.addr  vpn.plutus
preprod/wallets/: provider-stake.addr  provider-stake.skey  provider-stake.vkey  provider.addr  provider.skey  provider.vkey  user1-stake.addr  user1-stake.skey  user1-stake.vkey  user1.addr  (+14 more)
scripts/: 01-mint-admin-nft.sh  02a-mint-vpn-access.sh  02b-update-reference.sh  03a-extend-vpn-access.sh  04a-burn-vpn-access.sh  04b-burn-vpn-access-provider.sh  04c-burn-nft.sh  07-mint-vpn-midnight.sh  08-extend-vpn-midnight.sh  09-deploy-midnight-config.sh  balance.sh  compactc  create-user-stake.sh  env.sh
test/: midnight_test_proof.json  test-midnight-integration.sh
validators/: escrow_nft.ak  midnight_escrow.ak  nft.ak  nullifier.ak  tests.ak  tests_escrow.ak  vpn.ak
(+51 files in other folders)
