[package]
name = "vpn-payment-circuit"
version = "0.1.0"
edition = "2021"
authors = ["Blink Labs"]
description = "Halo2 ZK circuit for VPN payment verification"
license = "Apache-2.0"

[dependencies]
# Halo2 proving system (IOG fork with BLS12-381 support for Cardano)
# Using local clone for debugging
halo2_proofs = { path = "/tmp/iog-halo2" }
halo2curves = "0.7"
ff = "0.13"

# BLS12-381 support (for Cardano-compatible verifier generation)
blstrs = "0.7"

# Cryptographic primitives
blake2 = "0.10"
sha2 = "0.10"
blake2b_simd = "1"

# Poseidon hash for BLS12-381 (used by IOG/Cardano ecosystem)
poseidon = { git = "https://github.com/iquerejeta/Poseidon252", rev = "650b06a" }
# BLS12-381 scalar field (same version as poseidon252 uses)
bls12_381 = "0.8"

# Big integer arithmetic
num-bigint = "0.4"
num-traits = "0.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"

# Random number generation (for testing)
rand = "0.8"
rand_core = "0.6"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "circuit_bench"
harness = false

[features]
default = []
circuit-params = []
