[package]
name = "vpn-payment-circuit"
version = "0.1.0"
edition = "2021"
authors = ["Blink Labs"]
description = "Halo2 ZK circuit for VPN payment verification"
license = "Apache-2.0"

[dependencies]
# Halo2 proving system (Midnight fork)
halo2_proofs = { git = "https://github.com/midnightntwrk/halo2.git", branch = "main" }
halo2curves = "0.8"
ff = "0.13"

# BLS12-381 support (for Cardano-compatible verifier generation)
blstrs = "0.7"

# Cryptographic primitives
blake2 = "0.10"
sha2 = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"

# Random number generation (for testing)
rand = "0.8"
rand_core = "0.6"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "circuit_bench"
harness = false

[features]
default = []
circuit-params = []
